terminal scrollbar issue

--- a/root/resources/style.css
+++ b/root/resources/style.css
@@ -267,4 +267,17 @@ workflow-app-layout{
     0%{width:0%}
     100%{width:100%}
 }
-
+#workspace-main[data-view="terminal"]{
+    overflow:hidden;
+}
+.terminal-view{
+    display:block;
+    height:100%;
+}
+.terminal-container{
+    height:100%;
+}
+.terminal-container .terminal{
+    width:100%;
+    height:100%;
+}
